<resources>
    <string name="app_name">BrewMe</string>
    <string name="title_activity_main">BrewMe</string>
    <string name="title_activity_search">Search</string>
    <string name="title_review">Review</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="search_hint">Search</string>
    <string name="by_city_text">Search by city</string>
    <string name="by_state_text">Search by state</string>
    <string name="by_name_text">Search by name</string>

    <!-- Sign in fragment strings -->
    <string name="login_message">Login to your account</string>
    <string name="email_hint">email</string>
    <string name="pwd_hint">password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="pwd_reenter_hint">re-enter password</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="register_message">Register a new account</string>
    <string name="register">Register</string>
    <string name="LOGIN_PREFS">edu.uw.tacoma.group7.brewme.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="USERNAME">Username</string>


    <!-- Search details page strings -->
    <string name="brewery_details">7 Seas Brewery and Taproom 2101 Jefferson Ave Tacoma, WA 98402</string>
    <string name="write_review_button">Write Review</string>
    <string name="google_maps_button">Google Maps</string>
    <string name="check_in__button">Check In</string>
    <string name="share_button">Share via SMS</string>
    <string name="user_reviews_button">User Reviews</string>
    <string name="test_address">2102+Jefferson+Ave+Tacoma+WA</string>

    <!-- Review strings -->
    <string name="review_title_hint">Enter review title</string>
    <string name="review_input_hint">Write review here</string>
    <string name="add_review_endpoint">https://jamess33-services-backend.herokuapp.com/reviews/addreview</string>
    <string name="get_reviews_endpoint">https://jamess33-services-backend.herokuapp.com/reviews/review</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

