...
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <!-- Button design generated at http://angrytools.com/android/button/ -->

        <Button
            android:id="@+id/angry_btn_search"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonshape"
            android:onClick="launchSearchActivity"
...
