...
                android:inputType="text"
                android:hint="Enter Search Details"
                >
                <requestFocus/>
            </AutoCompleteTextView>
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                />

        </LinearLayout>
...
